[package]
name = "rs-call-me-maybe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde ={version =  "1.0.144", features = ["derive"] }
simple-error = "0.2.3"
home = "0.5.3"
toml = "0.5.9"
